[project]
name = "forevergreen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt>=4.3.0",
    "daphne>=4.2.1",
    "django>=5.2.6",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]


[tool.ruff]
exclude = ["manage.py"]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "YTT", "ANN", "ASYNC", "S", "BLE", "FBT", "B", "A", "C4", "DTZ", "T10", "DJ", "EM", "INT", "ISC", "ICN", "LOG", "G", "INP", "PIE", "T20", "PYI", "Q", "RET", "SLF", "SIM", "SLOT", "TID", "ARG", "PTH", "FLY", "C90", "N", "PERF", "PLE", "PLR", "PLW", "UP", "FURB", "TRY"]

[tool.ruff.format]
indent-style = "space"
docstring-code-format = true